@@ -1,5 +1,6 @@
 26 November 2012: Wouter
 	- Fix to make nsd.udb portable between 32bit and 64bit machines.
+	- Fix to make udb mmap work for FreeBSD8 when it grows significantly.
 
 23 November 2012: Wouter
 	- Fix compiler warnings and fix blocking pipes.
